<resources>
    <string name="app_name">ColorShare</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_file">Select file</string>
    <string name="default_file_to_send_message">File to send</string>
    <string name="start_sending">Start sending!</string>
    <string name="receive">Receive</string>
    <string name="setting_up_text">Setting up transmitter and receiver communication</string>
</resources>